# PAWSS

./: .gitignore  CMakeLists.txt  README.md  config.txt  config_mot.txt  config_vot2014.txt  config_vot2015.txt
CMakeModules/: SetPlatformVars.cmake
cmake/: OpenCVConfig.cmake
demo/: CMakeLists.txt  main.cpp
demo/MOT/: CMakeLists.txt  main.cpp
demo/SOT/: CMakeLists.txt  main.cpp  main_vot.cpp
header/: Config.h  ImageRep.h  Kernels.h  Sample.h  Tracker.h  mUtils.h  motModel.h  pixelComp.h  scaleEstimator.h  segModel.h  structuredSVM.h
header/Features/: Feature.h  GradFeature.h  GrayFeature.h  HsvFeature.h  MotFeature.h  PatchFeature.h  PatchGradFeature.h  PatchGrayFeature.h  PatchGrayGFeature.h  PatchHsvFeature.h  PatchHsvGFeature.h  PatchHsvMFeature.h  PatchMotFeature.h  PatchRgbFeature.h  PatchRgbGFeature.h  PatchRgbMFeature.h  RgbFeature.h
header/votUtils/native/: region_convert.mexmaci64  region_mask.mexmaci64  region_overlap.mexmaci64  trax.md5  traxdummy  vot.md5  write_trajectory.mexmaci64
header/votUtils/native/mex/: traxserver.mexmaci64
include/PAWSS/: Config.h  ImageRep.h  Kernels.h  Sample.h  Tracker.h  mUtils.h  macros.h  motModel.h  pixelComp.h  segModel.h  structuredSVM.h
include/PAWSS/Features/: Feature.h  GradFeature.h  GrayFeature.h  HsvFeature.h  MotFeature.h  PatchFeature.h  PatchGradFeature.h  PatchGrayFeature.h  PatchGrayGFeature.h  PatchHsvFeature.h  PatchHsvGFeature.h  PatchHsvMFeature.h  PatchMotFeature.h  PatchRgbFeature.h  PatchRgbGFeature.h  PatchRgbMFeature.h  RgbFeature.h
include/PAWSS/votUtils/native/: benchmark_native.mexmaci64  read_trajectory.mexmaci64  traxclient
sequences/: README.md
sequences/Football1/: Football1_frames.txt
src/: CMakeLists.txt  Config.cpp  ImageRep.cpp  PAWSSConfig.cmake.in  PAWSSConfigVersion.cmake.in  Tracker.cpp  config.h.in  mUtils.cpp  main.cpp  main_vot.cpp  motModel.cpp  scaleEstimator.cpp  segModel.cpp  structuredSVM.cpp
src/Features/: Feature.cpp  GradFeature.cpp  GrayFeature.cpp  HsvFeature.cpp  MotFeature.cpp  PatchFeature.cpp  PatchGradFeature.cpp  PatchGrayFeature.cpp  PatchGrayGFeature.cpp  PatchHsvFeature.cpp  PatchHsvGFeature.cpp  PatchHsvMFeature.cpp  PatchMotFeature.cpp  PatchRgbFeature.cpp  PatchRgbGFeature.cpp  PatchRgbMFeature.cpp  RgbFeature.cpp
src/GraphUtils/: GraphUtils.cpp
